--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="card">
             <h2><span class="emoji">🌾</span> Manage Multiple Farms</h2>
             <p>Managing multiple farms can be challenging- Here's how you can effectively handle your farm data!</p>
+            <p><a href="codeblocks://open/path/to/your/farmdata.cpp">Open in Code::Blocks (Windows only)</a></p>
             <button>Manage Farms</button>
         </div>
 
