--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card">
             <h2><span class="emoji">🌾</span> Manage Multiple Farms</h2>
             <p>Managing multiple farms can be challenging- Here's how you can effectively handle your farm data!</p>
-            <p><a href="path/to/your/codefile.cpp" download="codefile.cpp">Download Code File</a></p>
+            <p><a href="path/to/your/farmdata.cpp" download="farmdata.cpp">Download Code File</a></p>
             <button>Manage Farms</button>
         </div>
 
