--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="card">
             <h2><span class="emoji">⚡</span> Energy Connections</h2>
             <p>What's on your mind? Now, ensuring efficient energy connections between farms and sources is no longer a challenge!!</p>
+                <p><a href="https://drive.google.com/file/d/16Yap6R8so7KNVyB9Hsw3wrY089uy7FD5/view?usp=sharing" target="_blank">Open Code File in Google Drive</a></p>
             <button>Manage Energy</button>
         </div>
 
