--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <h1>Welcome to Aranyagiri 🌿</h1>
         <p>"Farmers play a crucial role in sustaining human life and the economy. Let’s make their lives easier!"</p>
+        <p>Now, step into the shoes of a farmer and head to the field to get to work!!</p>
+        <p>Imagine your having a lovely day , click on the works you want to accomplish first:</p>
+
     </header>
 
     <div class="container">
