--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to Aranyagiri 🌿</h1>
         <p>"Farmers play a crucial role in sustaining human life and the economy. Let’s make their lives easier!"</p>
         <p>Now, step into the shoes of a farmer and head to the field to get to work!!</p>
-        <p>Imagine your having a lovely day , click on the works you want to accomplish first:</p>
+        <p>Imagine your having a wonderful day , click on the works you want to accomplish :</p>
 
     </header>
 
